--- a/IBMmSkillHive/app/views/layouts/application.html.erb
+++ b/IBMmSkillHive/app/views/layouts/application.html.erb
@@ -8,7 +8,8 @@
 
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_include_tag "application", "data-turbo-track": "reload", defer: true %>
-  </head>
+    <script src="https://public.tableau.com/javascripts/api/tableau-2.min.js"></script>
+ </head>
 
   <body>
     <%= yield %>
