--- a/IBMmSkillHive/app/assets/stylesheets/application.bootstrap.scss
+++ b/IBMmSkillHive/app/assets/stylesheets/application.bootstrap.scss
@@ -175,3 +175,11 @@
     left: 0px;
     top: 150px;
   }
+
+  .tableau-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+  }
+  
